--- a/AsmApp/Views/Book/Index.cshtml
+++ b/AsmApp/Views/Book/Index.cshtml
@@ -7,7 +7,7 @@
     }
     <table class="table table-bordered">
         <tr>
-            <th colspan="3" class="h3 bg-light text-success">Book List</th>
+            <th colspan="4" class="h3 bg-light text-success">Book List</th>
             <th class="col-md-4">
                 <a class="btn btn-primary" asp-controller="Book" asp-action="Create">
                     Add new Book
@@ -18,6 +18,7 @@
             <th>Book Id</th>
             <th>Book Name</th>
             <th>Book Image</th>
+            <th>Category</th>
             <th>Action</th>
         </tr>
         @foreach (var book in Model)
@@ -32,6 +33,7 @@
                 <td>
                     @book.Name
                 </td>
+                <td>@book.Category</td>
                 <td>
                     <a class="btn btn-primary" asp-controller="Book" asp-action="Edit" asp-route-id="@book.Id">
                         Edit
